# signal-simulator

./: .gitignore  SignalSimulator.spec  config.py  functions.py  main_window.py  modals.py  pyproject.toml  state_updater.py  states.py
classes/: basewidget.py  basewidgets.py  block_panel.py  block_zone.py  config.py  discover_zone.py  element_list.py  modals.py  monitor.py  states.py  working_zone.py
classes/blocks/: basic_block.py
classes/research/: element_list.py  element_list_item.py  monitor.py
