[tool.poetry]
name = "signal-simulator"
version = "1.0.0"
description = "This app created to describe students low-level processes while sending signal through communication lines"
authors = ["Enthony Phil <jellyskate1999@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pyqtgraph = "^0.12.1"

[tool.poetry.dev-dependencies]
PySide6 = "^6.0.3"
flake8 = "^3.9.1"
pep8-naming = "^0.11.1"
isort = "^5.8.0"
flake8-black = "^0.2.1"
snoop = "^0.3.0"
matplotlib = "^3.4.2"
colorednoise = "^1.1.1"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
